--- a/meta-openpli/conf/layer.conf
+++ b/meta-openpli/conf/layer.conf
@@ -2,7 +2,9 @@
 BBPATH .= ":${LAYERDIR}"
 
 # We have a recipes directory, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes-*/*/*.bb ${LAYERDIR}/recipes-*/*/*.bbappend"
+BBFILES += "${LAYERDIR}/recipes-*/*.bb ${LAYERDIR}/recipes-*/*.bbappend \
+            ${LAYERDIR}/recipes-*/*/*.bb ${LAYERDIR}/recipes-*/*/*.bbappend \
+            ${LAYERDIR}/recipes-*/*/*/*.bb ${LAYERDIR}/recipes-*/*/*/*.bbappend"
 
 BBFILE_COLLECTIONS += "openpli-layer"
 BBFILE_PATTERN_openpli-layer := "^${LAYERDIR}/"
@@ -20,12 +22,10 @@ INSANE_SKIP_${PN} += "already-stripped"
 #Include glib-gettextize, subversion and msgfmt(gettext) to hosttools
 HOSTTOOLS += "glib-gettextize svn msgfmt python2"
 
-MACHINE="dm8000"
-
 LAYERSERIES_COMPAT_openpli-layer = "dunfell"
 
 # This prevents bitbake to fail at do_package caused by default OE-core split style variable setting
-PACKAGE_DEBUG_SPLIT_STYLE = ""
+PACKAGE_DEBUG_SPLIT_STYLE = "debug-without-src"
 
 MIRRORS += "\
 ftp://.*/.*    http://source.mynonpublic.com/ \n \
